fix: layout issue
close #7

--- a/src/celemod-ui/src/routes/Manage.scss
+++ b/src/celemod-ui/src/routes/Manage.scss
@@ -46,10 +46,15 @@
         }
 
         .list {
+            .padding {
+                height: 40px;
+                width: 100%;
+                display: block;
+            }
             margin-top: 8px;
             behavior: virtual-list;
             overflow-y: scroll;
-            height: calc(100vh - 150px);
+            height: calc(100vh - 160px);
 
             .ma-badge {
                 display: inline-block;
